# ari_tutorials

./: ari_public-melodic.rosinstall  ari_public-noetic.rosinstall  ari_public.repos
ari_aruco_demo/: CMakeLists.txt  package.xml
ari_aruco_demo/config/: aruco_demo.rviz
ari_aruco_demo/launch/: detector.launch
ari_look_to_point/: CMakeLists.txt  package.xml
ari_look_to_point/src/: ari_look_to_point.cpp
ari_moveit_tutorial/: CMakeLists.txt  package.xml
ari_moveit_tutorial/launch/: octomap_ari.launch
ari_moveit_tutorial/src/: plan_arm_torso_fk.cpp  plan_left_arm_fk.cpp  plan_left_arm_ik.cpp
ari_opencv_tutorial/: CMakeLists.txt  package.xml
ari_opencv_tutorial/src/: corner_detection.cpp
ari_play_with_sensors/: CMakeLists.txt  package.xml
ari_play_with_sensors/scripts/: current_play.py  image_play.py  laser_play.py
ari_say_something/: CMakeLists.txt  package.xml
ari_say_something/scripts/: say.py
ari_trajectory_controller/: CMakeLists.txt  package.xml
ari_trajectory_controller/src/: run_traj_control.cpp
ari_tts_tutorials/: CMakeLists.txt  ReadMe.md  package.xml
ari_tts_tutorials/launch/: tts.launch
ari_tts_tutorials/scripts/: tts_say.py
play_with_sensors/: CMakeLists.txt  package.xml
play_with_sensors/scripts/: image_play.py  laser_play.py
say_something/: CMakeLists.txt  package.xml
tts/: package.xml
tts/launch/: tts.launch
