<?xml version="1.0"?>
<package>
  <name>ari_aruco_demo</name>
  <version>2.0.2</version>
  <description>The ari_aruco_demo package</description>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aruco_ros</build_depend>
  <run_depend>aruco_ros</run_depend>
  <export>
  </export>
</package>
