<?xml version="1.0"?>
<package>
  <name>ari_say_something</name>
  <version>2.0.2</version>
  <description>The say_something package contains examples of using the text
    to speech action server</description>

  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
