<?xml version="1.0"?>
<package format="2">
  <name>ari_trajectory_controller</name>
  <version>0.0.0</version>
  <description>Example on how to use the trajectory controller to make the robot reach some given waypoints</description>
  <author email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</author>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
