<?xml version="1.0"?>
<package>
  <name>ari_tts_tutorials</name>
  <version>2.0.2</version>
  <description>This package contains a tutorial on how to use the PAL Robotics TTS action server</description>
  <author email="job.1994@gmail.com">Job van Dieten</author>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
